    --source-only and --binary-only options that allow you to control whether
    sources or binaries are shadowed. 
  * Branch and shadow commands now take an unlimited number of troves
    to branch/shadow.
  * Files sharing versions but with different contents (thanks to flavors)
    got lost when switching from one flavor of a trove to another

Changes in 0.62.11:
  * InstallBucket policy now allows using macros in component names.
  * The --resume option now works correctly when conary has
    automatically discovered a non-standard path for the main build
    directory.
  * A soname dependency is again generated for libraries outside of
    library directories, but the pathname is now included in the
    dependency.  Within a package, all matching dependencies are
    modified to include the path.  This is useful for cases where
    an application packages private versions of libraries -- the
    dependencies still need to be there so that inter-component
    requirements are honored, but they must not perturb the rest
    of the system.  
  * Recursive pinning now behaves itself 
  * Switch group recipe syntax to use r.add() instead of r.addTrove, 
    r.remove() instead of r.removeTrove(), and add a
    r.setDefaultGroup() command to set the default group.

Changes in 0.62.10:
  * EnforceSonameBuildRequirements enhanced to handle correctly cases
    where more than one trove can resolve a single soname dependency.
  * EnforceConfigLogBuildRequirements now can take exceptions, which
    can be specified either as a filename (such as /usr/bin/bison or
    %(bindir)s/bison) or as a required trove (such as bison:runtime).
  * The trove.Trove initializer no longer allows for a trove to be created
    with a name that has more than one ":" character in it.
  * EnforceSonameBuildRequirements now can take exceptions, which are
    specified as a required trove (such as libfoo:devel) to avoid adding
    to the list of requirements.