@@ -16,6 +16,8 @@ Changes in 0.62.12:
     to branch/shadow.
   * Files sharing versions but with different contents (thanks to flavors)
     got lost when switching from one flavor of a trove to another
+  * troves can now be specified for rq, q, and update as <labelpart>/<version>,
+    e.g., foo=:rpl1/1.0, or foo=contrib.rpath.com@/2.3-1-2
 
 Changes in 0.62.11:
   * InstallBucket policy now allows using macros in component names.
